crates/analyzer/tests/snapshots/errors__invalid_msg_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: cannot find value `msg` in this scope
  ┌─ compile_errors/invalid_msg_field.fe:4:5
  │
4 │     msg.foo
  │     ^^^ undefined


